feat: implement settings api
